--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, max-initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
     <title>Компьютерные новинки</title>
 </head>
 <body>
-    
+    <header>
+        <div id="logo"></div>
+        <nav>
+            <ul>
+                <li>Главная</li>
+                <li>Новинки</li>
+                <li>История</li>
+                <li>Контакты</li>
+            </ul>
+        </nav>
+    </header>
+    <content>
+        <div class="catalog">
+
+        </div>
+        <div class="title">
+
+        </div>
+        <div class="discription">
+
+        </div>
+    </content>
+    <footer>
+        
+    </footer>
 </body>
 </html>
