--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <header>
-        <div id="logo"></div>
+        <div id="logo">
+            <img alt="logo" src="./img/logo.jpg">
+        </div>
         <nav>
             <ul>
-                <li>Главная</li>
-                <li>Новинки</li>
-                <li>История</li>
-                <li>Контакты</li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">История</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +33,7 @@
         </div>
     </content>
     <footer>
-        
+
     </footer>
 </body>
 </html>
