--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     </header>
     <content>
         <div class="catalog">
-
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero fugit veritatis quibusdam iste ullam totam quo excepturi itaque! Esse similique natus sed, obcaecati voluptatum nesciunt minima necessitatibus iure doloribus dolorem dicta tenetur voluptas aperiam aliquam aut dolore. Quam, eveniet maxime.</p>
         </div>
         <div class="title">
-
+            <p>Новинки в мире компьютерных технологий</p>
         </div>
-        <div class="discription">
-
+        <div class="description">
+            <p>Компьютер (комп, пк) — это электронно вычислительная машина, для обработки и выполнения определенных задач. Может быть мульти-задачным, или для решения специфических узкоспециализированных задач. Термин чаще употребляют для обозначения вычислительной машины, собранной из аппаратного обеспечения (железа) в системном блоке.</p>
         </div>
     </content>
     <footer>
