--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">Новости</a></li>
+                <li><a href="index_2.html">Новости</a></li>
                 <li><a href="#">История</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
