--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, max-initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <title>Компьютерные новинки</title>
+    <title>Компьютерные новости</title>
 </head>
 <body>
     <header>
@@ -21,17 +21,24 @@
             </ul>
         </nav>
     </header>
-    <content>
-        <div class="catalog">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero fugit veritatis quibusdam iste ullam totam quo excepturi itaque! Esse similique natus sed, obcaecati voluptatum nesciunt minima necessitatibus iure doloribus dolorem dicta tenetur voluptas aperiam aliquam aut dolore. Quam, eveniet maxime.</p>
-        </div>
+    <div class="catalog">
+        <h1>Новости</h1>
+        <ul>
+            <li><a href="#">Искуственный интелект</a></li>
+            <li><a href="#">Нейросети</a></li>
+            <li><a href="#">VR технологии</a></li>
+            <li><a href="#">Видеоигры</a></li>
+            <li><a href="#">Программы и приложения</a></li>
+        </ul> 
+    </div>
+    <div class="content">
         <div class="title">
-            <p>Новинки в мире компьютерных технологий</p>
+            <p>Новости в мире компьютерных технологий</p>
         </div>
         <div class="description">
             <p>Компьютер (комп, пк) — это электронно вычислительная машина, для обработки и выполнения определенных задач. Может быть мульти-задачным, или для решения специфических узкоспециализированных задач. Термин чаще употребляют для обозначения вычислительной машины, собранной из аппаратного обеспечения (железа) в системном блоке.</p>
         </div>
-    </content>
+    </div>
     <footer>
 
     </footer>
