--- a/index_2.html
+++ b/index_2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, max-initial-scale=1.0">
     <link rel="stylesheet" href="style_2.css"/>
-    <title>Компьютерные новинки</title>
+    <title>Компьютерные новости</title>
 </head>
 <body>
     <header>
@@ -22,26 +22,36 @@
         </nav>
     </header>
     <div class="catalog">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero fugit veritatis quibusdam iste ullam totam quo excepturi itaque! Esse similique natus sed, obcaecati voluptatum nesciunt minima necessitatibus iure doloribus dolorem dicta tenetur voluptas aperiam aliquam aut dolore. Quam, eveniet maxime.</p>
+        <h1>Новости</h1>
+        <ul>
+            <li><a href="#">Искуственный интелект</a></li>
+            <li><a href="#">Нейросети</a></li>
+            <li><a href="#">VR технологии</a></li>
+            <li><a href="#">Видеоигры</a></li>
+            <li><a href="#">Программы и приложения</a></li>
+        </ul>
     </div>
     <div class="content">
         <div class="news">
             <div class="article">
-                <img alt="news" src="./img/news.jpg">
+                <img alt="news" src="./img/news_1.jpg">
                 <div class="description">
-                    <p>Компьютер является именно электронно вычислительной машиной и собирается из нескольких разных устройств, которые называются аппаратным обеспечением. Собранные вместе в системном блоке они и составляют ПК. Также, это правило и распространяется и на другие.</p>
+                    <h1>Робот-охранник появится в подмосковной Ивантеевке</h1>
+                    <p>Андроид российской компании Promobot станет охранником и консьержем офиса фирмы по продаже компьютерной техники в Ивантеевке, пишет интернет-издание "Подмосковье сегодня"<a  class="more" href="#">подробнее...</a></p>
                 </div>
             </div>
             <div class="article">
-                <img alt="news" src="./img/news.jpg">
+                <img alt="news" src="./img/news_2.jpg">
                 <div class="description">
-                    <p>Компьютер является именно электронно вычислительной машиной и собирается из нескольких разных устройств, которые называются аппаратным обеспечением. Собранные вместе в системном блоке они и составляют ПК. Также, это правило и распространяется и на другие.</p>
+                    <h1>Возглавить кругосветку XIX века. Технология, превращающая историю в жизнь</h1>
+                    <p>Более двухсот лет назад стартовала первая русская кругосветная экспедиция. Современные VR-технологии позволяют не только отправиться в то время и место, но даже оказаться "в теле" участника плавания<a  class="more" href="#">подробнее...</a></p>
                 </div>
             </div>
             <div class="article">
-                <img alt="news" src="./img/news.jpg">
+                <img alt="news" src="./img/news_3.jpg">
                 <div class="description">
-                    <p>Компьютер является именно электронно вычислительной машиной и собирается из нескольких разных устройств, которые называются аппаратным обеспечением. Собранные вместе в системном блоке они и составляют ПК. Также, это правило и распространяется и на другие.</p>
+                    <h1>Сверхразум выходит из-под контроля. Ученые обеспокоены новой угрозой</h1>
+                    <p>Достижения последних лет в области машинного обучения позволили создать автономные роботизированные системы в том числе военного назначения. В связи с этим в научной среде с новой силой разгорелась дискуссия о потенциальных рисках<a  class="more" href="#">подробнее...</a></p>
                 </div>
             </div>
         </div>
