--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Новости в мире компьютерных технологий</p>
         </div>
         <div class="description">
-            <p>Компьютер (комп, пк) — это электронно вычислительная машина, для обработки и выполнения определенных задач. Может быть мульти-задачным, или для решения специфических узкоспециализированных задач. Термин чаще употребляют для обозначения вычислительной машины, собранной из аппаратного обеспечения (железа) в системном блоке.</p>
+            <p>Компьютер — это электронно вычислительная машина, для обработки и выполнения определенных задач. Может быть мульти-задачным, или для решения специфических узкоспециализированных задач. Термин чаще употребляют для обозначения вычислительной машины, собранной из аппаратного обеспечения (железа) в системном блоке.</p>
         </div>
     </div>
     <footer>
